--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,14 +18,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       
-    - name: Setup .NET
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+      
+    - name: Setup .NET5
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    
-    #- name: Update VS2019
-    #  shell: pwsh
-    #  run: Start-Process -Wait -PassThru -FilePath "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vs_installer.exe" -ArgumentList "update --passive --norestart --installpath ""C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise"""
     
     - name: Restore dependencies
       run: dotnet restore
