--- a/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
+++ b/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
@@ -3,18 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<IsPackable>false</IsPackable>
-		<ApplicationIcon>favico.ico</ApplicationIcon>
-		<Version>1.0.0.1</Version>
-		<Authors>Moq contributors</Authors>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageProjectUrl>https://github.com/moq</PackageProjectUrl>
-		<PackageIcon>favico.png</PackageIcon>
-		<PackageTags>moq, tdd, mocking, mocks, unittesting, agile, unittest, microsoft, configuration</PackageTags>
-		<Description>Extension methods for setupping mock values of Microsoft.Extensions.Configuration.IConfiguration.</Description>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Product>Moq</Product>
-		<Copyright>© 2021 Moq contributors</Copyright>
-		<RepositoryUrl>https://github.com/MihailsKuzmins/Moq.Microsoft.Configuration</RepositoryUrl>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -34,13 +23,6 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\Moq.Microsoft.Configuration.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Include="..\..\images\favico.png">
-	    <Pack>True</Pack>
-	    <PackagePath />
-	  </None>
 	</ItemGroup>
 
 </Project>
