--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,4 +35,4 @@ jobs:
       run: dotnet build --no-restore
     
     - name: Test
-      run: dotnet test --v m
+      run: dotnet test --no-build --no-restore -v m
