create a test source generator

--- a/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
+++ b/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
@@ -24,6 +24,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\Moq.Microsoft.Configuration.csproj" />
+	  <ProjectReference Include="..\Moq.Microsoft.Configuration.Tests.SourceGenerators\Moq.Microsoft.Configuration.Tests.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
