--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,7 @@
 version: 2
 updates:
 - package-ecosystem: nuget
-  directory: "/src"
-  schedule:
-    interval: daily
-    time: "00:00"
-  open-pull-requests-limit: 10
-- package-ecosystem: nuget
-  directory: "/tests"
+  directory: "/"
   schedule:
     interval: daily
     time: "00:00"
