--- a/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
+++ b/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
@@ -24,6 +25,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\Moq.Microsoft.Configuration.csproj" />
+	  <ProjectReference Include="..\Moq.Microsoft.Configuration.Tests.SourceGenerators\Moq.Microsoft.Configuration.Tests.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
