--- a/src/Moq.Microsoft.Configuration.csproj
+++ b/src/Moq.Microsoft.Configuration.csproj
@@ -13,9 +13,9 @@
 		<PackageIcon>favico.png</PackageIcon>
 		<PackageTags>moq, tdd, mocking, mocks, unittesting, agile, unittest, microsoft, configuration</PackageTags>
 		<Description>Extension methods for setupping mock values of Microsoft.Extensions.Configuration.IConfiguration.</Description>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
 		<Product>Moq</Product>
-		<Copyright>© 2021 Moq contributors</Copyright>
+		<Copyright>© 2022 Moq contributors</Copyright>
 		<RepositoryUrl>https://github.com/MihailsKuzmins/Moq.Microsoft.Configuration</RepositoryUrl>
 		<PackageReleaseNotes>https://github.com/MihailsKuzmins/Moq.Microsoft.Configuration/releases</PackageReleaseNotes>
 	</PropertyGroup>
