--- a/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
+++ b/tests/Moq.Microsoft.Configuration.Tests/Moq.Microsoft.Configuration.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFrameworks>net6.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
