--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -30,6 +30,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+
+    - name: Install .NET7
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.x
     
     - name: NuGet restore
       run: dotnet restore
