--- a/tests/Moq.Microsoft.Configuration.Tests.SourceGenerators/Moq.Microsoft.Configuration.Tests.SourceGenerators.csproj
+++ b/tests/Moq.Microsoft.Configuration.Tests.SourceGenerators/Moq.Microsoft.Configuration.Tests.SourceGenerators.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 
 	<ItemGroup>
